--- a/pags/login/login.html
+++ b/pags/login/login.html
@@ -85,7 +85,7 @@
                     <span class="destaqueCareer">xxx</span>, ...
                 </h2>
 
-                <form action="">
+                <form action="../../PHP/LOGS/create.php" method="post">
                     <div class="campo selectedInput">
                         <label for="">Opção selecionada:</label>
                         <input type="text" class="inputContent" readonly>
