--- a/pags/index.html
+++ b/pags/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
+    <script src="../JS/index.js" defer></script>
+    <script src="../JS/jquery.js" defer></script>
     <title>RLM</title>
 </head>
 <body>
@@ -13,24 +15,24 @@
     <main>
         <div class="card">
             <h3>Coletor</h3>
-            <p>Coletor ....</p>
-            <button>
+            <img src="../img/IMG_7485.JPG" alt="">
+            <button class="btnLog">
                 Selecionar
             </button>
         </div>
 
         <div class="card">
-            <h3>Coletor</h3>
-            <p>Coletor ....</p>
-            <button>
+            <h3>Acumulador</h3>
+            <img src="../img/IMG_7498.JPG" alt="">
+            <button class="btnLog">
                 Selecionar
             </button>
         </div>
 
         <div class="card">
-            <h3>Coletor</h3>
-            <p>Coletor ....</p>
-            <button>
+            <h3>Empresa</h3>
+            <img src="../img/IMG_7661.jpg" alt="">
+            <button class="btnLog">
                 Selecionar
             </button>
         </div>
