--- a/pags/acumulador.html
+++ b/pags/acumulador.html
@@ -10,8 +10,9 @@
     <title>RLM</title>
 </head>
 <body>
+    <button class="back">Voltar</button>
     <header>
-        <h1>RLM - acumulador</h1>
+        <h1>RLM - Acumulador</h1>
     </header>
     <main>
         <div class="container" id="squareScroll">
@@ -33,8 +34,8 @@
                 </div>
 
                 <div class="component">
-                    <label for="">STATUS</label> <br>
-                    <input type="text" name="" id="">
+                    <label for="">TELEFONE</label> <br>
+                    <input type="number" name="" id="">
                 </div>
 
                 <div class="component">
