--- a/pags/empresa.html
+++ b/pags/empresa.html
@@ -10,8 +10,9 @@
     <title>RLM</title>
 </head>
 <body>
+    <button class="back">Voltar</button>
     <header>
-        <h1>RLM -empresa</h1>
+        <h1>RLM - Empresa</h1>
     </header>
     <main>
         <div class="container" id="squareScroll">
@@ -23,18 +24,32 @@
         <div class="container" id="formContainer">
             <form action="" method="">
                 <div class="component">
-                    <label for="">Postagem</label> <br>
-                    <button>Detalhes</button>
+                    <label for="">Produto selecionado</label>
+                    <input type="text" name="" id="" readonly>
                 </div>
 
                 <div class="component">
                     <label for="">NOME</label> <br>
-                    <input type="number" name="" id="" readonly>
+                    <input type="number" name="" id="" >
                 </div>
 
                 <div class="component">
-                    <label for="">CPF</label> <br>
-                    <input type="text" name="" id="" readonly>
+                    <label for="">CPF ou CNPJ</label> <br>
+                    <input type="text" name="" id="" >
+                </div>
+
+                <div class="component">
+                    <label for="">TELEFONE</label> <br>
+                    <input type="number" name="" id="" >
+                </div>
+
+                <div class="component">
+                    <label for="">PREÇO</label> <br>
+                    <input type="number" name="" id="" >
+                </div>
+
+                <div class="component">
+                    <input type="submit" value="Enviar oferta para os coletores" name="" id="">
                 </div>
             </form>
         </div>
