--- a/pags/coletor.html
+++ b/pags/coletor.html
@@ -10,8 +10,9 @@
     <title>RLM</title>
 </head>
 <body>
+    <button class="back">Voltar</button>
     <header>
-        <h1>RLM - coletor</h1>
+        <h1>RLM - Coletor</h1>
     </header>
     <main>
         <div class="container" id="squareScroll">
@@ -23,18 +24,17 @@
         <div class="container" id="formContainer">
             <form action="" method="">
                 <div class="component">
-                    <label for="">Postagem</label> <br>
-                    <button>Detalhes</button>
-                </div>
-
-                <div class="component">
                     <label for="">NOME</label> <br>
-                    <input type="number" name="" id="" readonly>
+                    <input type="number" name="" id="" >
                 </div>
 
                 <div class="component">
                     <label for="">CPF</label> <br>
-                    <input type="text" name="" id="" readonly>
+                    <input type="text" name="" id="" >
+                </div>
+
+                <div class="component">
+                    <input type="submit" value="Aceitar" name="" id="">
                 </div>
             </form>
         </div>
