--- a/pags/coletor.html
+++ b/pags/coletor.html
@@ -24,6 +24,11 @@
         <div class="container" id="formContainer">
             <form action="" method="">
                 <div class="component">
+                    <label for="">Produto selecionado</label>
+                    <input type="text" name="" id="" readonly>
+                </div>
+                
+                <div class="component">
                     <label for="">NOME</label> <br>
                     <input type="number" name="" id="" >
                 </div>
