--- a/pags/index.html
+++ b/pags/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/Acumuladores.css">
+    <link rel="stylesheet" href="../CSS/index.css">
     <link rel="stylesheet" href="../CSS/geral.css">
-    <script src="../JS/Acumuladores.js" defer></script>
+    <script src="../JS/index.js" defer></script>
     <title>Acumuladores</title>
 </head>
 <body>
