--- a/pags/index.html
+++ b/pags/index.html
@@ -17,7 +17,7 @@
             <section id="container">
                 <section class="pedidos">
                         <article class="subtitle">
-                            <h2>Pedididos Acumuladores</h2>
+                            <h2>Pedididos</h2>
                         </article>
                     </section>
                 <section class="form">
