--- a/pags/login.html
+++ b/pags/login.html
@@ -20,7 +20,7 @@
                 <article>
                     <h3>Acumulador</h3>
                 </article>
-                <button><a href="../pags/index.html">Coletor</a></button>
+                <button>Coletor</button>
             </div>
 
             <div class="option">
@@ -28,7 +28,7 @@
                 <article>
                     <h3>Coletor</h3>
                 </article>
-                <button><a href="../pags/index.html">Empresa</a></button>
+                <button>Empresa</button>
             </div>
 
             <div class="option">
@@ -36,7 +36,7 @@
                 <article>
                     <h3>Empresa</h3>
                 </article>
-                <button><a href="../pags/index.html">Acumualdor</a></button>
+                <button>Acumualdor</button>
             </div>
         </section>
         
