--- a/pags/login.html
+++ b/pags/login.html
@@ -13,14 +13,14 @@
         RLM
     </header>
     <main>
-
+        <h1>O que você é ?</h1>
         <section id="container">
             <div class="option">
                 <img src="" alt="" class="imgLog">
                 <article>
-                    <h3>Acumulador</h3>
+                    <h3>Empresa</h3>
                 </article>
-                <button>Coletor</button>
+                <button><a href="../pags/empresas.html">Empresa</a></button>
             </div>
 
             <div class="option">
@@ -28,15 +28,15 @@
                 <article>
                     <h3>Coletor</h3>
                 </article>
-                <button>Empresa</button>
+                <button><a href="../pags/coletor.html">Coletor</a></button>
             </div>
 
             <div class="option">
                 <img src="" alt="" class="imgLog">
                 <article>
-                    <h3>Empresa</h3>
+                    <h3>Acumulador</h3>
                 </article>
-                <button>Acumualdor</button>
+                <button><a href="../pags/acumulador.html">Acumulador</a></button>
             </div>
         </section>
         
