--- a/pags/acumulador.html
+++ b/pags/acumulador.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        RLM  - Acumualdores
+        RLM  - Acumuladores
     </header>
     <main>
         <section>
@@ -40,10 +40,13 @@
                                         <label for="">CEP</label> <br>
                                         <input type="text" name="" id="">
                                     </div>
-                                    <div class="campo">
-                                        <label for="">Valor</label> <br>
-                                        <input type="number" name="" id="">
-                                    </div>
+                                        <div class="campo">
+                                            <label for="">Valor</label> <br>
+                                            <div class="row_noBetween">
+                                                <input type="number" name="" id="">
+                                                <span>R$</span>
+                                            </div>
+                                        </div>
                                 </form>
                         </section>
                     </section>
